--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1196,6 +1196,158 @@ a {
 .cid-tDoqcA8AI8 .justify-content-center {
   align-items: center;
 }
+.cid-tDptrjzoAV {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  background-color: #ffffff;
+}
+.cid-tDptrjzoAV img,
+.cid-tDptrjzoAV .item-img {
+  width: 100%;
+  height: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+.cid-tDptrjzoAV .item:focus,
+.cid-tDptrjzoAV span:focus {
+  outline: none;
+}
+.cid-tDptrjzoAV .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+  position: relative;
+}
+.cid-tDptrjzoAV .item-wrapper {
+  position: unset;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-tDptrjzoAV .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-tDptrjzoAV .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-tDptrjzoAV .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-tDptrjzoAV .mbr-section-title {
+  color: #232323;
+}
+.cid-tDpsgJHoHh {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-color: #fafafa;
+}
+.cid-tDpsgJHoHh .carousel {
+  height: 800px;
+}
+.cid-tDpsgJHoHh .carousel img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.cid-tDpsgJHoHh .carousel-item,
+.cid-tDpsgJHoHh .carousel-inner {
+  height: 100%;
+}
+.cid-tDpsgJHoHh .carousel-caption {
+  bottom: 40px;
+}
+.cid-tDpsgJHoHh .mobi-mbri-arrow-next {
+  margin-left: 5px;
+}
+.cid-tDpsgJHoHh .mobi-mbri-arrow-prev {
+  margin-right: 5px;
+}
+.cid-tDpsgJHoHh .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+.cid-tDpsgJHoHh .item-wrapper {
+  width: 100%;
+}
+@media (max-width: 767px) {
+  .cid-tDpsgJHoHh .container .carousel-control {
+    margin-bottom: 0;
+  }
+  .cid-tDpsgJHoHh .content-slider-wrap {
+    width: 100% !important;
+  }
+}
+.cid-tDpsgJHoHh .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+.cid-tDpsgJHoHh .carousel-control {
+  top: 50%;
+  width: 60px;
+  height: 60px;
+  margin-top: -1.5rem;
+  font-size: 22px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all 0.3s;
+}
+.cid-tDpsgJHoHh .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-tDpsgJHoHh .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+@media (max-width: 767px) {
+  .cid-tDpsgJHoHh .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-tDpsgJHoHh .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 1.5rem !important;
+}
+.cid-tDpsgJHoHh .carousel-indicators li {
+  max-width: 15px;
+  height: 15px;
+  width: 15px;
+  max-height: 15px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+.cid-tDpsgJHoHh .carousel-indicators li.active,
+.cid-tDpsgJHoHh .carousel-indicators li:hover {
+  opacity: 0.9;
+}
+.cid-tDpsgJHoHh .carousel-indicators li::after,
+.cid-tDpsgJHoHh .carousel-indicators li::before {
+  content: none;
+}
+.cid-tDpsgJHoHh .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .cid-tDpsgJHoHh .carousel-indicators {
+    display: none !important;
+  }
+}
 .cid-tDoBryIt7k {
   padding-top: 6rem;
   padding-bottom: 6rem;
